# mcp-git

./: .bandit  .env.example  .gitignore  .safety-project.ini  CLAUDE.md  Dockerfile  Makefile  README.md  bandit_report.json  docker-compose.yml  install-git-hook.sh  prometheus.yml  pyproject.toml  safety_report.json  verify_new_features.py
.claude/skills/uv-package-manager/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: API.md  API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  FAQ.md  USER_GUIDE.md  configuration.md  error-codes.md  git.md  monitoring.md  prd.md  task.md  tdd.md  test.md  uat.md
grafana/provisioning/dashboards/: mcp-git-overview.json
mcp_git/: __init__.py  audit.py  cache.py  config.py  config_watcher.py  error.py  error_sanitizer.py  main.py  metrics.py  rate_limit.py  retry.py  utils.py  validation.py
mcp_git.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp_git/execution/: __init__.py  task_queue.py  worker_pool.py
mcp_git/executor/: __init__.py
mcp_git/git/: __init__.py  adapter.py  adapter_gitpython.py  cli_adapter.py
mcp_git/mcp/: __init__.py
mcp_git/observability/: __init__.py  tracing.py
mcp_git/server/: __init__.py  handlers.py  handlers_metrics.py  server.py  tool_router.py  tools.py
mcp_git/service/: __init__.py  credential_manager.py  facade.py  facade_branch.py  facade_remote.py  facade_tag.py  facade_workspace.py  task_manager.py  workspace_manager.py
mcp_git/services/: __init__.py  git_service.py  service_interface.py  storage_service.py  task_service.py  workspace_service.py
mcp_git/storage/: __init__.py  models.py  orm_models.py  sqlite.py
mcp_git/utils/: __init__.py
monitoring/: alertmanager.yml  alerts.yml  prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboards.yml  mcp-git-dashboard.json
monitoring/grafana/provisioning/datasources/: prometheus.yml
scripts/: pre-commit-check.sh
temp/python/: fix-issues.sh  pyproject.toml  quick-check.sh
temp/python/.github/workflows/: ci.yml  release.yml
templates/python-ci/: CHEATSHEET.md  README.md
templates/python-ci/.github/workflows/: tag-deleted.yml
templeate/: prd-template.md
test-data/: README.md  run_all.sh
test-data/configs/: test_config.yaml  uat_config.yaml
test-data/data/fixtures/: branches.json  commits.json
test-data/scripts/: api_validator.py  api_validator_simple.py  create_test_repos.sh  scenario_validator.sh  uat_validator.sh
tests/: __init__.py  conftest.py  test_audit.py  test_benchmarks.py  test_blame.py  test_cache.py  test_cli_adapter.py  test_cli_adapter_integration.py  test_concurrency.py  test_config.py  test_config_logging.py  test_config_watcher.py  test_credential_security.py  test_error_sanitizer.py  test_fault_injection.py  test_git_adapter.py  test_integration.py  test_lfs.py  test_main.py  test_metrics.py  test_models.py  test_path_security.py  test_performance.py  test_rate_limit.py  test_retry.py  test_security.py  test_server.py  test_sparse_checkout.py  test_storage.py  test_storage_edge_cases.py  test_task_manager.py  test_task_queue.py  test_worker_pool.py  test_workspace_manager.py
